--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,7 @@ jobs:
   build-and-release:
     name: Build and Upload Release
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')  # Extra safeguard
 
     steps:
       - name: 📥 Checkout code
@@ -21,6 +22,9 @@ jobs:
 
       - name: 🧱 Install build dependencies
         run: sudo apt-get update && sudo apt-get install -y zip
+
+      - name: ✅ Run tests
+        run: make test
 
       - name: 🔨 Build and package
         run: make package
